--- a/web/pluto-lite/client/css/style.css
+++ b/web/pluto-lite/client/css/style.css
@@ -1,10 +1,15 @@
+td{
+	font-family: Arial, Verdana,  Helvetica, sans-serif; 
+	font-size: 12px; 
+}
+
 table.plutotable{
     background: #f9f9f9;
     border: 1px #aaa solid;
     border-collapse: collapse;
 }
 
-table.plutotable th, table.plutotable td{
+table.plutotable td{
 	font-family: Arial, Verdana,  Helvetica, sans-serif; 
 	font-size: 12px; 
     border: 1px #aaa solid;
@@ -16,6 +21,16 @@ table.plutotable th{
 	font-size: 12px; 
     background: #f2f2f2;
     text-align: left;
+}
+
+table.simpletable{
+    border: 0px;
+}
+
+table.simpletable td{
+	font-family: Arial, Verdana,  Helvetica, sans-serif; 
+	font-size: 12px; 
+    border: 0px;
 }
 
 a.menu {
@@ -37,4 +52,9 @@ a.menu:hover {
 	font-size: 12px; 
 	text-decoration: none;
 	color: red;
+}
+.dropdown{
+	width:200px;
+	font-family: Arial, Verdana,  Helvetica, sans-serif; 
+	font-size: 12px; 
 }
