Fixes #309 - /var/spool/asterisk added to exports and fstab.

--- a/src/BootScripts/templates/exports.tmpl
+++ b/src/BootScripts/templates/exports.tmpl
@@ -7,3 +7,4 @@
 /usr/pluto/keys %INTERNAL_SUBNET%/%INTERNAL_SUBNET_MASK%(ro,no_root_squash,no_all_squash,async,no_subtree_check)
 /usr/pluto/deb-cache %INTERNAL_SUBNET%/%INTERNAL_SUBNET_MASK%(ro,no_root_squash,no_all_squash,async,no_subtree_check)
 /usr/pluto/var %INTERNAL_SUBNET%/%INTERNAL_SUBNET_MASK%(rw,no_root_squash,no_all_squash,async,no_subtree_check)
+/var/spool/asterisk %INTERNAL_SUBNET%/%INTERNAL_SUBNET_MASK%(rw,no_root_squash,no_all_squash,async,no_subtree_check)
