fixes #513 - The Climate scenario wizard now works properly with devices other than Thermostats

--- a/web/lmce-admin/include/styles/main.css
+++ b/web/lmce-admin/include/styles/main.css
@@ -162,6 +162,13 @@ textarea {
 	color: #CCCCCC;
 }
 
+.sectionhead{
+	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #FFFFFF;
+	background-color: #000000;
+}
+
 .tablehead{
    font-family: Arial, Verdana, Helvetica, sans-serif;
    font-size: 12px;
