--- a/web/iOrbiter/iui/iui.css
+++ b/web/iOrbiter/iui/iui.css
@@ -1,4 +1,4 @@
-/* iui.css (c) 2007 by iUI Project Members, see LICENSE.txt for license */
+/* iui.css (c) 2007-9 by iUI Project Members, see LICENSE.txt for license */
 body {
     margin: 0;
     font-family: Helvetica;
@@ -18,6 +18,9 @@ body > *:not(.toolbar) {
     top: 45px;
     width: 100%;
     min-height: 372px;
+    -webkit-transition-duration: 300ms;
+    -webkit-transition-property: -webkit-transform;
+    -webkit-transform: translateX(0%);
 }
 
 body[orient="landscape"] > *:not(.toolbar) {
@@ -118,6 +121,7 @@ body[orient="landscape"] > .toolbar > h1 {
 }
 
 .whiteButton,
+.redButton,
 .grayButton {
     display: block;
     border-width: 0 12px;
@@ -132,6 +136,12 @@ body[orient="landscape"] > .toolbar > h1 {
 .whiteButton {
     -webkit-border-image: url(whiteButton.png) 0 12 0 12;
     text-shadow: rgba(255, 255, 255, 0.7) 0 1px 0;
+}
+
+.redButton {
+    -webkit-border-image: url(redButton.png) 0 12 0 12;
+    color:#fff;
+    text-shadow: #7a0001 0 -1px 0;
 }
 
 .grayButton {
@@ -230,7 +240,7 @@ body > .dialog {
     color: #999999;
 }
 
-input {
+input:not(input[type|=radio]):not(input[type|=checkbox]) {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     width: 100%;
@@ -244,6 +254,7 @@ input {
 
 body > .panel {
     box-sizing: border-box;
+    -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     padding: 10px;
     background: #c8c8c8 url(pinstripes.png);
@@ -255,6 +266,7 @@ body > .panel {
     padding: 0;
     background: #FFFFFF;
     -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
     border: 1px solid #999999;
     text-align: right;
     font-size: 16px;
@@ -272,8 +284,9 @@ fieldset > .row:last-child {
     border-bottom: none !important;
 }
 
-.row > input {
+.row > input:not(input[type|=radio]):not(input[type|=checkbox]) {
     box-sizing: border-box;
+    -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     margin: 0;
     border: none;
@@ -281,12 +294,23 @@ fieldset > .row:last-child {
     height: 42px;
     background: none;
 }
+.row > input[type|=radio], .row > input[type|=checkbox] {
+  margin: 7px 7px 0 0;
+  height: 25px;
+  width: 25px;
+}
 
 .row > label {
     position: absolute;
     margin: 0 0 0 14px;
     line-height: 42px;
     font-weight: bold;
+}
+
+.row > span {
+    position: absolute;
+    padding: 12px 10px 0 110px;
+    margin: 0;
 }
 
 .row > .toggle {
