--- a/src/BootScripts/templates/dhcpd.conf.tmpl
+++ b/src/BootScripts/templates/dhcpd.conf.tmpl
@@ -45,3 +45,8 @@ group {
 group {
 	%NOBOOT_ENTRIES%
 }
+
+# addition to the dhcpd conf file should be maintained in this 
+# extra file.
+include "/etc/dhcp3/dhcpd-extra.conf";
+
