--- a/src/BootScripts/templates/dhcpd.conf.tmpl
+++ b/src/BootScripts/templates/dhcpd.conf.tmpl
@@ -46,7 +46,11 @@ group {
 	%NOBOOT_ENTRIES%
 }
 
-# addition to the dhcpd conf file should be maintained in this 
+# The following machines did not have a valid MAC address assigned in the database.
+# You may want to correct this manually via the web admin.
+%NOMAC_ENTRIES%
+
+# Custom additions to the dhcpd conf file should be maintained in this 
 # extra file.
 include "/etc/dhcp3/dhcpd-extra.conf";
 
