--- a/src/QML_Light_Switch/Light_Switch/Light_Switch_Graphics.qrc
+++ b/src/QML_Light_Switch/Light_Switch/Light_Switch_Graphics.qrc
@@ -1,7 +1,10 @@
 <RCC>
     <qresource prefix="/floorlamps"/>
     <qresource prefix="/desklamps"/>
-    <qresource prefix="/sconces"/>
+    <qresource prefix="/sconces">
+        <file>off.png</file>
+        <file>on.png</file>
+    </qresource>
     <qresource prefix="/security"/>
     <qresource prefix="/ceiling"/>
     <qresource prefix="/design"/>
