Ref #1085: QML Light Switch  - Working on qt/dce integration

--- a/src/QML_Light_Switch/Light_Switch/Light_Switch_Graphics.qrc
+++ b/src/QML_Light_Switch/Light_Switch/Light_Switch_Graphics.qrc
@@ -8,4 +8,8 @@
     <qresource prefix="/security"/>
     <qresource prefix="/ceiling"/>
     <qresource prefix="/design"/>
+    <qresource prefix="/QML">
+        <file>qml/Light_Switch/SwitchButton.qml</file>
+        <file>qml/Light_Switch/main.qml</file>
+    </qresource>
 </RCC>
