--- a/src/Orbiter/Linux/GTKOrbiter.glade
+++ b/src/Orbiter/Linux/GTKOrbiter.glade
@@ -6,103 +6,65 @@
     <property name="border_width">8</property>
     <property name="title" translatable="yes">Progress Window</property>
     <property name="modal">True</property>
-    <property name="window_position">center-always</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
     <property name="decorated">False</property>
     <property name="deletable">False</property>
     <property name="gravity">center</property>
     <child>
-      <object class="GtkTable" id="progressTable">
+      <object class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
-        <property name="n_rows">3</property>
-        <property name="n_columns">3</property>
         <child>
-          <object class="GtkVBox" id="progressVbox">
+          <object class="GtkLabel" id="progressLabel">
             <property name="visible">True</property>
-            <property name="spacing">6</property>
-            <child>
-              <object class="GtkLabel" id="progressLabel">
-                <property name="visible">True</property>
-                <property name="label" translatable="yes">&lt;span size="xx-large" weight="heavy"&gt;Progress Label&lt;/span&gt;</property>
-                <property name="use_markup">True</property>
-                <property name="justify">center</property>
-                <property name="wrap">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="padding">8</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkProgressBar" id="progressBar">
-                <property name="visible">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
+            <property name="label" translatable="yes">&lt;span size="xx-large" weight="heavy"&gt;Progress Label&lt;/span&gt;</property>
+            <property name="use_markup">True</property>
+            <property name="justify">center</property>
+            <property name="wrap">True</property>
+            <property name="track_visited_links">False</property>
           </object>
           <packing>
-            <property name="left_attach">1</property>
-            <property name="right_attach">2</property>
-            <property name="top_attach">1</property>
-            <property name="bottom_attach">2</property>
+            <property name="padding">8</property>
+            <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
+          <object class="GtkProgressBar" id="progressBar">
+            <property name="visible">True</property>
+            <property name="extension_events">all</property>
+            <property name="show_text">True</property>
+          </object>
+          <packing>
+            <property name="fill">False</property>
+            <property name="padding">1</property>
+            <property name="position">1</property>
+          </packing>
         </child>
       </object>
     </child>
   </object>
   <object class="GtkWindow" id="promptWindow">
-    <property name="width_request">640</property>
-    <property name="height_request">480</property>
     <property name="border_width">8</property>
-    <property name="type">popup</property>
     <property name="title" translatable="yes">Prompt User Window</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="window_position">center-always</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
+    <property name="decorated">False</property>
     <child>
       <object class="GtkVBox" id="promptVbox">
         <property name="visible">True</property>
+        <property name="homogeneous">True</property>
         <child>
-          <object class="GtkLabel" id="progressLabell">
+          <object class="GtkLabel" id="promptLabel">
             <property name="visible">True</property>
             <property name="label" translatable="yes">&lt;span size="xx-large" weight="heavy"&gt;Prompt User Label&lt;/span&gt;</property>
             <property name="use_markup">True</property>
             <property name="justify">center</property>
+            <property name="wrap">True</property>
           </object>
           <packing>
-            <property name="expand">False</property>
             <property name="padding">8</property>
             <property name="position">0</property>
           </packing>
@@ -125,5 +87,10 @@
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkSizeGroup" id="sizegroup1">
+    <widgets>
+      <widget name="progressLabel"/>
+    </widgets>
   </object>
 </interface>
