--- a/src/qOrbiter/qObiter_src/skinData.qrc
+++ b/src/qOrbiter/qObiter_src/skinData.qrc
@@ -5,4 +5,7 @@
     <qresource prefix="/skins">
         <file>qml/skins/scheme/classic/Main.qml</file>
     </qresource>
+    <qresource prefix="/img">
+        <file alias="splash.jpg">img/lmcesplash.jpg</file>
+    </qresource>
 </RCC>
