--- a/src/qOrbiter/qObiter_src/skinData.qrc
+++ b/src/qOrbiter/qObiter_src/skinData.qrc
@@ -8,4 +8,45 @@
     <qresource prefix="/img">
         <file alias="splash.jpg">img/lmcesplash.jpg</file>
     </qresource>
+    <qresource prefix="/icons">
+        <file alias="mythIcon.jpg">img/icons/Mythtv.png</file>
+        <file alias="security.png">img/icons/aktion.png</file>
+        <file alias="videos.png">img/icons/xine.png</file>
+        <file alias="playlist.png">img/icons/kedit.png</file>
+        <file alias="user.png">img/icons/personal.png</file>
+        <file alias="telecom.png">img/icons/linphone.png</file>
+        <file>img/icons/audio&amp;video.png</file>
+        <file>img/icons/agt_games.png</file>
+        <file>img/icons/agt_home.png</file>
+        <file>img/icons/agt_mp3.png</file>
+        <file>img/icons/agt_multimedia.png</file>
+        <file>img/icons/fortress.png</file>
+        <file>img/icons/gpgsm.png</file>
+        <file>img/icons/harddrive2.png</file>
+        <file alias="light-off.png">img/icons/jabber_protocol.png</file>
+        <file alias="home.png">img/icons/kfm_home.png</file>
+        <file>img/icons/kmix.png</file>
+        <file>img/icons/kservices.png</file>
+        <file alias="light-on.png">img/icons/ktip.png</file>
+        <file alias="weather.png">img/icons/kweather.png</file>
+        <file alias="photos.png">img/icons/lphoto.png</file>
+        <file alias="song-item.png">img/icons/lsongs.png</file>
+        <file>img/icons/package_editors.png</file>
+        <file>img/icons/package_games_arcade.png</file>
+        <file alias="media-games.png">img/icons/package_games.png</file>
+        <file>img/icons/password.png</file>
+        <file alias="media-eject">img/icons/player_eject.png</file>
+        <file alias="media-end.png">img/icons/player_end.png</file>
+        <file>img/icons/player_end1.png</file>
+        <file alias="media-fwd.png">img/icons/player_fwd.png</file>
+        <file alias="media-pause.png">img/icons/player_pause.png</file>
+        <file alias="media-play.png">img/icons/player_play.png</file>
+        <file alias="media-rew.png">img/icons/player_rew.png</file>
+        <file alias="media-start.png">img/icons/player_start.png</file>
+        <file alias="media-stop.png">img/icons/player_stop.png</file>
+        <file alias="media-end.png">img/icons/player-end.png</file>
+        <file alias="video-blank.png">img/icons/scifi.png</file>
+        <file>img/icons/sms_protocol.png</file>
+        <file alias="livetv.png">img/icons/tv.png</file>
+    </qresource>
 </RCC>
