refs #1108 qOrbiter - fixing import paths, references to moved headers. do'h!

--- a/src/qOrbiter/qObiter_src/skinData.qrc
+++ b/src/qOrbiter/qObiter_src/skinData.qrc
@@ -1,5 +1,7 @@
 <RCC>
-    <qresource prefix="/default"/>
+    <qresource prefix="/default">
+        <file>qml/qObiter_src/main.qml</file>
+    </qresource>
     <qresource prefix="/skins"/>
     <qresource prefix="/img">
         <file alias="splash.jpg">img/lmcesplash.jpg</file>
