--- a/src/qOrbiter/qObiter_src/skinData.qrc
+++ b/src/qOrbiter/qObiter_src/skinData.qrc
@@ -36,6 +36,7 @@
         <file alias="media-end-bar.png">img/icons/player-end.png</file>
         <file alias="video-blank.png">img/icons/scifi.png</file>
         <file>img/icons/sms_protocol.png</file>
+        <file alias="living-room.png">img/icons/mediatime.png</file>
     </qresource>
     <qresource prefix="/qml">
         <file alias="Style.qml">qml/desktop/droid/Style.qml</file>
