--- a/src/BootScripts/templates/fstab.tmpl
+++ b/src/BootScripts/templates/fstab.tmpl
@@ -15,4 +15,4 @@ sysfs		/sys		sysfs	defaults		0	0
 #//%CORE_INTERNAL_ADDRESS%/home				/home			pluto-fuse-smb credentials=/usr/pluto/var/sambaCredentials.secret,nonempty,auto_cache 1 1
 #//%CORE_INTERNAL_ADDRESS%/home				/home			cifs iocharset=utf8,credentials=/usr/pluto/var/sambaCredentials.secret 1 1
 %CORE_INTERNAL_ADDRESS%:/home				/home			nfs4 retrans=10,timeo=50 1 1
-%CORE_INTERNAL_ADDRESS%:/home/camera			/home/cameras		nfs4 retrans=10,timeo=50 1 1
+%CORE_INTERNAL_ADDRESS%:/home/cameras			/home/cameras		nfs4 retrans=10,timeo=50 1 1
