refs #1251 - qorbiter ui - adds lighting controls, internal cleanup functions for thumbnail function and reverts unsucessfull threading attempts.

--- a/src/qOrbiter/qOrbiter_src/skinData.qrc
+++ b/src/qOrbiter/qOrbiter_src/skinData.qrc
@@ -46,4 +46,5 @@
     <qresource prefix="/desktop">
         <file alias="Splash.qml">qml/Splash.qml</file>
     </qresource>
+    <qresource prefix="/new/prefix1"/>
 </RCC>
