refs #1108 - adds splash.qml for OSX

--- a/src/qOrbiter/qOrbiter_src/skinData.qrc
+++ b/src/qOrbiter/qOrbiter_src/skinData.qrc
@@ -16,4 +16,7 @@
     <qresource prefix="/iphone"/>
     <qresource prefix="/ipad"/>
     <qresource prefix="/nacl"/>
+    <qresource prefix="/osx">
+        <file>qml/Splash.qml</file>
+    </qresource>
 </RCC>
