refs #1108 progress towards new orbiter setup including feedback on failed connect, and non crashing (for me) when manually entering device number

--- a/src/qOrbiter/qOrbiter_src/skinData.qrc
+++ b/src/qOrbiter/qOrbiter_src/skinData.qrc
@@ -46,6 +46,7 @@
     </qresource>
     <qresource prefix="/desktop">
         <file alias="Splash.qml">qml/Splash.qml</file>
+        <file alias="SetupNewOrbiter.qml">qml/SetupNewOrbiter.qml</file>
     </qresource>
     <qresource prefix="/osx">
         <file alias="Splash.qml">qml/Splash.qml</file>
