--- a/src/qOrbiter/qOrbiter_src/skinData.qrc
+++ b/src/qOrbiter/qOrbiter_src/skinData.qrc
@@ -51,4 +51,7 @@
     <qresource prefix="/osx">
         <file alias="Splash.qml">qml/Splash.qml</file>
     </qresource>
+    <qresource prefix="/harmattan">
+        <file alias="Splash.qml">qml/harmattan/default/Splash.qml</file>
+    </qresource>
 </RCC>
