refs #1251 qorbiter skin stuff - adds data to qml, changes to qrc and splash adding logic for screen change to new orbiter setup, corrects label to title, adds slots for window to act on dce messages.

--- a/src/qOrbiter/qOrbiter_src/skinData.qrc
+++ b/src/qOrbiter/qOrbiter_src/skinData.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/img">
         <file alias="config.xml">config.xml</file>
-        <file>img/lmcesplash.png</file>
+        <file alias="desktop_splash.png">img/lmcesplash.png</file>
         <file alias="harmattan_splash_bkg.png">img/harmattan_splash_bkg.png</file>
         <file alias="harmattan_splash.png">img/harmattan_splash.png</file>
     </qresource>
