--- a/src/qOrbiter/qOrbiter_src/skinData.qrc
+++ b/src/qOrbiter/qOrbiter_src/skinData.qrc
@@ -55,4 +55,8 @@
     <qresource prefix="/harmattan">
         <file alias="Splash.qml">qml/harmattan/default/Splash.qml</file>
     </qresource>
+    <qresource prefix="/android">
+        <file alias="SetupNewOrbiter.qml">skins/andriod/SetupNewOrbiter.qml</file>
+        <file alias="Splash.qml">skins/andriod/Splash.qml</file>
+    </qresource>
 </RCC>
